FlightPath 6.x Changelog
========================

2022-03-17
  For menu items, if there is an icon, give it an ALT tag of whatever the title of the menu is.
  
  Made sure the logo image for FlightPath had an alt tag.
  
  Made the 'Welcome to FlightPath' message on login page use the system_name variable.

  Added new modal dialog for "loading" and "updating", which dims screen and is more visible than old method that showed
  when logging in or waiting on dialogs to save (like subs or moving courses).
  
  Cleaned up way that scrollTop was calculated for pages.  Will eventually use window.scrollY if no other method can be found.  Also, placed into system.js so it is always
  available in one spot, as function fpGetScrollTop().
  
  Made it so that if "scroll_top" is in the $_REQUEST when we submit a form, it includes that value when the form does an fp_goto and reloads.
  

2022-03-12
  Added new feature to function get_term_structures, where "term_suffix" is now one of the values returned, instead of just being
  in the key of the array.
  
  Altered functions in stats so that we can override the default breadcrumbs on the form where we select the school. 

  Made sure course_search also excluded courses with delete_flag set.


2022-03-11
  Modified course_search_dislay_search to use render array system, so other modules can make modifications.
  
  Added weights to course_search edit form, making it easier for other modules to make modifications.
  
  

2022-03-09
  Added abiility to filter by degree level (UG or GR) on the admin console -> degree list screen.
  
  Changed comments and removed old code from hook.api.php.
  

2022-03-08
  Fixed a bug when sending the "Contact the FlightPath Production Team" email, where the last selected student CWID was not appearing.
  
  Removed the outdated "addslashes" to the msg of the email from the Contact link.  Also added a "close window" button on the "Thank You" page.
  