@@ -2,5 +2,5 @@ name = System
 description = This module controls various settings for FlightPath, and is required for FlightPath to run.  It cannot be disabled.
 core = 6.x
 required = true
-schema = 7
+schema = 9
  
